# ctfcli

./: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  development.txt  preprocess.py  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: lint.yml  release.yml  test.yml
ctfcli/: __init__.py  __main__.py
ctfcli/cli/: challenges.py  config.py  instance.py  media.py  pages.py  plugins.py  templates.py
ctfcli/core/: api.py  challenge.py  config.py  exceptions.py  image.py  lint.py  media.py  page.py  plugins.py
ctfcli/core/deployment/: __init__.py  base.py  cloud.py  registry.py  ssh.py
ctfcli/core/instance/: config.py
ctfcli/core/properties/: __init__.py  base.py  collections.py  files.py  image.py  references.py  scalars.py  solution.py
ctfcli/spec/: challenge-example.yml
ctfcli/templates/binary/default/: cookiecutter.json
ctfcli/templates/binary/default/{{cookiecutter.name}}/: Makefile
ctfcli/templates/binary/default/{{cookiecutter.name}}/src/: {{cookiecutter.name}}.c
ctfcli/templates/blank/default/: cookiecutter.json
ctfcli/templates/blank/empty/: cookiecutter.json
ctfcli/templates/blank/empty/{{cookiecutter.dirname}}/: challenge.yml
ctfcli/templates/crypto/default/: cookiecutter.json
ctfcli/templates/crypto/default/{{cookiecutter.name}}/: Makefile
ctfcli/templates/crypto/default/{{cookiecutter.name}}/src/: encrypt.py  flag.txt
ctfcli/templates/programming/default/: cookiecutter.json
ctfcli/templates/programming/default/{{cookiecutter.name}}/: Dockerfile  challenge.yml  docker-compose.yml
ctfcli/templates/programming/default/{{cookiecutter.name}}/src/: requirements.txt  serve.sh  server.py
ctfcli/templates/web/default/{{cookiecutter.name}}/: Dockerfile  README.md
ctfcli/templates/web/default/{{cookiecutter.name}}/src/: app.py  serve.sh  (+3 more)
ctfcli/utils/: api.py  challenge.py  config.py  deploy.py  git.py  hashing.py  images.py  pages.py  plugins.py  spec.py  templates.py  tools.py
ctfcli/utils/integrations/: __init__.py  github.py  gitlab.py
docs/: plugins.md
scripts/: pip-compile.sh
tests/cli/: test_main.py
tests/core/: test_api.py  test_challenge.py  test_config.py  test_exceptions.py  test_image.py  test_page.py  test_plugins.py
tests/core/deployment/: test_base_deployment_handler.py  test_cloud_deployment.py  test_registry_deployment.py  test_ssh_deployment.py
tests/fixtures/challenges/.ctf/: config
tests/fixtures/challenges/pages/: html-page.html  markdown-page.md
tests/fixtures/challenges/pages/nested/: html-page.htm
tests/fixtures/challenges/test-challenge-dockerfile/: Dockerfile  challenge.yml
tests/fixtures/challenges/test-challenge-dockerfile/src/: index.html
tests/fixtures/challenges/test-challenge-files/: challenge.yml
tests/fixtures/challenges/test-challenge-files/files/: flag.txt
tests/fixtures/challenges/test-challenge-full/: challenge.yml
tests/fixtures/challenges/test-challenge-invalid/: challenge-empty.yml  challenge-invalid.yml
tests/fixtures/challenges/test-challenge-invalid-dockerfile/: Dockerfile  challenge.yml
tests/fixtures/challenges/test-challenge-minimal/: challenge.yml
tests/fixtures/challenges/test-challenge-solution/: challenge.yml
tests/fixtures/challenges/test-challenge-solution/writeup/: WRITEUP-DUPLICATE.md  WRITEUP.md
tests/utils/: test_git.py  test_tools.py
(+7 files in other folders)
