[tool.poetry]
name = "ctfcli"
version = "0.0.14"
description = ""
authors = ["Kevin Chung <kchung@ctfd.io>", "Miłosz Skaza <milosz.skaza@ctfd.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-frontmatter = "^1.0.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"
click = "^8.1.6"
cookiecutter = "^2.3.0"
appdirs = "^1.4.4"
colorama = "^0.4.6"
fire = "^0.5.0"
typing-extensions = "^4.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.284"
isort = "^5.12.0"
green = "^3.4.3"

[tool.ruff]
line-length = 120
ignore = ["E721"]
exclude = ["build", "ctfcli/templates"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py311']
extend-exclude = '''
(
  /build
  | /ctfcli/templates
  | /venv
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
