[tool.poetry]
name = "ctfcli"
version = "0.1.1"
description = "ctfcli is a tool to manage Capture The Flag events and challenges"
authors = ["Kevin Chung <kchung@ctfd.io>", "Miłosz Skaza <milosz.skaza@ctfd.io>"]
readme = "README.md"

[tool.poetry.scripts]
ctf = "ctfcli.__main__:main"

[tool.poetry.build]
# I don't understand why poetry doesn't seem to be following symlinks. 
# This script resolves the symlinks in the templates to the example challenge spec
script = "preprocess.py"

[tool.poetry.dependencies]
python = "^3.8"
python-frontmatter = "^1.0.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"
click = "^8.1.7"
cookiecutter = "^2.3.0"
appdirs = "^1.4.4"
colorama = "^0.4.6"
fire = "^0.5.0"
typing-extensions = "^4.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.284"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"

[tool.ruff]
line-length = 120
ignore = ["E721"]
exclude = ["build", "ctfcli/templates"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py311']
extend-exclude = '''
(
  /build
  | /ctfcli/templates
  | /venv
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
