[project]
name = "ctfcli"
version = "0.1.5"
description = "ctfcli is a tool to manage Capture The Flag events and challenges"
authors = [
    { name = "Kevin Chung", email = "kchung@ctfd.io" },
    { name = "Miłosz Skaza", email = "milosz.skaza@ctfd.io" },
]
requires-python = ">=3.10,<4"
readme = "README.md"
dependencies = [
    "python-frontmatter>=1.0.0,<2",
    "requests>=2.31.0,<3",
    "pyyaml>=6.0.1,<7",
    "click>=8.1.7,<9",
    "cookiecutter>=2.3.0,<3",
    "appdirs>=1.4.4,<2",
    "colorama>=0.4.6,<0.5",
    "fire>=0.7.0,<0.8",
    "typing-extensions>=4.7.1,<5",
    "python-slugify>=8.0.4,<9",
]

[project.scripts]
ctf = "ctfcli.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.14.9,<0.15",
    "pytest>=7.4.0,<8",
    "pytest-sugar>=0.9.7,<0.10",
    "pytest-cov>=4.1.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I", "S", "SIM", "DTZ", "RUF"]
ignore = ["E721"]
exclude = ["build/**", "ctfcli/templates/**"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "SIM", "RUF"]

[tool.ruff.format]
exclude = ["build/**", "ctfcli/templates/**"]

